@@ -4,1802 +4,33 @@
 
 
 
-## 进程与线程
 
 
+## 章节
 
-### 进程
 
-程序由指令和数据组成，但这些指令要运行，数据要读写，就必须将指令加载至 CPU，数据加载至内存。在指令运行过程中还需要用到磁盘、网络等设备。进程就是用来加载指令、管理内存、管理 IO 的，。当一个程序被运行，从磁盘加载这个程序的代码至内存，这时就开启了一个进程。
 
-进程就可以视为程序的一个实例。大部分程序可以同时运行多个实例进程（例如记事本、画图、浏览器等），也有的程序只能启动一个实例进程（例如网易云音乐、360 安全卫士等）  
+- [01-线程与进程](./notes/01-进程与线程.md)
 
-进程的特征：并发性、异步性、动态性、独立性、结构性
+- [02-java线程](./notes/02-java线程)
 
-### 线程
+- [03-共享模型之管程](./notes/03-共享模型之管程)
 
-线程是属于进程的，是一个基本的 CPU 执行单元，是程序执行流的最小单元。线程是进程中的一个实体，是系统**独立调度的基本单位**，线程本身不拥有系统资源，只拥有一点在运行中必不可少的资源，与同属一个进程的其他线程共享进程所拥有的全部资源
 
-**关系**：一个进程可以包含多个线程，这就是多线程，比如看视频是进程，图画、声音、广告等就是多个线程
 
-**线程的作用**：使多道程序更好的并发执行，提高资源利用率和系统吞吐量，增强操作系统的并发性能。
 
-### 区别
 
-线程具有许多传统进程所具有的特征，故又称为轻型进程(Light—Weight Process)或进程元；而把传统的进程称为重型进程(Heavy—Weight Process)，它相当于只有一个线程的任务。在引入了线程的操作系统中，通常一个进程都有若干个线程，至少包含一个线程。
 
-**根本区别**：进程是操作系统「资源分配」的基本单位，而线程是处理器「任务调度」和执行的基本单位
 
-**资源开销**：每个进程都有独立的代码和数据空间（程序上下文），程序之间的切换会有较大的开销；线程可以看做轻量级的进程，同一类线程共享代码和数据空间，每个线程都有自己独立的运行栈和程序计数器（PC），线程之间切换的开销小。
 
-**包含关系**：如果一个进程内有多个线程，则执行过程不是一条线的，而是多条线（线程）共同完成的；线程是进程的一部分，所以线程也被称为轻权进程或者轻量级进程。
 
-**内存分配**：同一进程的线程共享本进程的地址空间和资源，而进程之间的地址空间和资源是相互独立的
 
-**影响关系**：一个进程崩溃后，在保护模式下不会对其他进程产生影响，但是一个线程崩溃整个进程都死掉。所以多进程要比多线程健壮。
 
-**执行过程**：每个独立的进程有程序运行的入口. 顺序执行序列和程序出口。但是线程不能独立执行，必须依存在应用程序中，由应用程序提供多个线程执行控制，两者均可并发执行
 
-### 并发并行
 
-* 并行：在同一时刻，有多个指令在多个 CPU 上同时执行
-* 并发：在同一时刻，有多个指令在单个 CPU 上交替执行
 
-### 同步异步
 
-* 需要等待结果返回，才能继续运行就是**同步**
-* 不需要等待结果返回，就能继续运行就是**异步**
 
-参考视频：https://www.bilibili.com/video/BV16J411h7Rd
-
-### 对比
-
-**线程进程对比：**
-
-* 进程基本上相互独立的，而线程存在于进程内，是进程的一个子集。
-
-* 进程拥有共享的资源，如内存空间等，供其**内部的线程共享**
-
-* 进程间通信较为复杂
-
-  同一台计算机的进程通信称为 IPC（Inter-process communication）
-
-  * 信号量：信号量是一个计数器，用于多进程对共享数据的访问，解决同步相关的问题并避免竞争条件
-  * 共享存储：多个进程可以访问同一块内存空间，需要使用信号量用来同步对共享存储的访问
-  * 管道通信：管道是用于连接一个读进程和一个写进程以实现它们之间通信的一个共享文件 pipe 文件，该文件同一时间只允许一个进程访问，所以只支持**半双工通信**
-    * 匿名管道（Pipes）：用于具有亲缘关系的父子进程间或者兄弟进程之间的通信
-    * 命名管道（Names Pipes）：以磁盘文件的方式存在，可以实现本机任意两个进程通信，遵循 FIFO
-  * 消息队列：内核中存储消息的链表，由消息队列标识符标识，能在不同进程之间提供**全双工通信**，对比管道：
-    * 匿名管道存在于内存中的文件；命名管道存在于实际的磁盘介质或者文件系统；消息队列存放在内核中，只有在内核重启（操作系统重启）或者显示地删除一个消息队列时，该消息队列才被真正删除
-    * 读进程可以根据消息类型有选择地接收消息，而不像 FIFO 那样只能默认地接收
-
-  不同计算机之间的**进程通信**，需要通过网络，并遵守共同的协议，例如 HTTP
-
-  * 套接字：与其它通信机制不同的是，可用于不同机器间的互相通信
-
-* 线程通信相对简单，因为线程之间共享进程内的内存，一个例子是多个线程可以访问同一个共享变量
-
-  **Java 中的通信机制**：volatile、等待/通知机制、join 方式、InheritableThreadLocal、MappedByteBuffer
-
-* 线程更轻量，线程上下文切换成本一般上要比进程上下文切换低
-
-
-
-
-
-***
-
-
-
-
-
-## Java 线程
-
-
-
-### 创建线程
-
-#### Thread
-
-Thread 创建线程方式：创建线程类，匿名内部类方式
-
-* **start() 方法底层其实是给 CPU 注册当前线程，并且触发 run() 方法执行**
-* 线程的启动必须调用 start() 方法，如果线程直接调用 run() 方法，相当于变成了普通类的执行，此时主线程将只有执行该线程
-* 建议线程先创建子线程，主线程的任务放在之后，否则主线程（main）永远是先执行完
-
-Thread 构造器：
-
-* `public Thread()`
-* `public Thread(String name)`
-
-```java
-/**
- * 线程创建方式1：实现 Thread#run() 方法
- */
-@Slf4j(topic = "c.CreateWay1")
-public class CreateWay1 {
-    public static void main(String[] args) {
-        // 创建线程对象
-        Thread t1 = new Thread("t1") {
-            @Override
-            public void run() {
-                log.debug("runing");
-            }
-        };
-        // 启动线程
-        t1.start();
-
-        log.debug("runing"); // 主线程
-    }
-}
-```
-
-继承 Thread 类的优缺点：
-
-* 优点：编码简单
-*  缺点：线程类已经继承了 Thread 类无法继承其他类了，功能不能通过继承拓展（单继承的局限性）
-
-
-
-***
-
-
-
-#### Runnable
-
-Runnable 创建线程方式：创建线程类，匿名内部类方式
-
-Thread 的构造器：
-
-* `public Thread(Runnable target)`
-* `public Thread(Runnable target, String name)`
-
-```java
-/**
- * 线程创建方式1：实现 Runnable 接口
- */
-@Slf4j(topic = "c.CreateWay2")
-public class CreateWay2 {
-    public static void main(String[] args) {
-        // 创建线程
-        Thread t1 = new Thread(() -> log.debug("running") , "t1");
-        // 启动线程
-        t1.start();
-        log.debug("running");
-    }
-}
-```
-
-**Thread 类本身也是实现了 Runnable 接口**，Thread 类中持有 Runnable 的属性，执行线程 run 方法底层是调用 Runnable#run：
-
-```java
-// 源码
-public class Thread implements Runnable {
-    private Runnable target;
-    ...
-    public void run() {
-        if (target != null) {
-          	// 底层调用的是 Runnable 的 run 方法
-            target.run();
-        }
-    }
-}
-```
-
-Runnable 方式的优缺点：
-
-* 缺点：代码复杂一点。
-
-* 优点：
-
-  1. 线程任务类只是实现了 Runnable 接口，可以继续继承其他类，避免了单继承的局限性
-
-  2. 同一个线程任务对象可以被包装成多个线程对象
-
-  3. 适合多个多个线程去共享同一个资源
-
-  4. 实现解耦操作，线程任务代码可以被多个线程共享，线程任务代码和线程独立
-
-  5. 线程池可以放入实现 Runnable 或 Callable 线程任务对象
-
-​     
-
-****
-
-
-
-#### Callable
-
-实现 Callable 接口：
-
-1. 定义一个线程任务类实现 Callable 接口，声明线程执行的结果类型
-2. 重写线程任务类的 call 方法，这个方法可以直接返回执行的结果
-3. 创建一个 Callable 的线程任务对象
-4. 把 Callable 的线程任务对象**包装成一个未来任务对象**
-5. 把未来任务对象包装成线程对象
-6. 调用线程的 start() 方法启动线程
-
-`public FutureTask(Callable<V> callable)`：未来任务对象，在线程执行完后得到线程的执行结果
-
-* FutureTask 就是 Runnable 对象，因为 **Thread 类只能执行 Runnable 实例的任务对象**，所以把 Callable 包装成未来任务对象
-* 线程池部分详解了 FutureTask 的源码
-
-`public V get()`：同步等待 task 执行完毕的结果，如果在线程中获取另一个线程执行结果，会阻塞等待，用于线程同步
-
-* get() 线程会阻塞等待任务执行完成
-* run() 执行完后会把结果设置到 FutureTask  的一个成员变量，get() 线程可以获取到该变量的值
-
-优缺点：
-
-* 优点：同 Runnable，并且**能得到线程执行的结果**
-* 缺点：编码复杂
-
-```java
-public class ThreadDemo {
-    public static void main(String[] args) {
-        Callable call = new MyCallable();
-        FutureTask<String> task = new FutureTask<>(call);
-        Thread t = new Thread(task);
-        t.start();
-        try {
-            String s = task.get(); // 获取call方法返回的结果（正常/异常结果）
-            System.out.println(s);
-        }  catch (Exception e) {
-            e.printStackTrace();
-        }
-    }
-
-public class MyCallable implements Callable<String> {
-    @Override//重写线程任务类方法
-    public String call() throws Exception {
-        return Thread.currentThread().getName() + "->" + "Hello World";
-    }
-}
-   
-```
-
-
-
-
-
-***
-
-
-
-### 线程方法
-
-#### Thread类常用API
-
-
-
-|    修饰符     | 返回值  | 方法名                    | 说明                                                         | 注意                                                         |
-| :-----------: | :-----: | ------------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
-|               |  void   | start()                   | 启动一个新线程，Java虚拟机调用此线程的 run 方法              | start方法只是让线程进入就绪状态，是否运行取决于任务调度器。<br>每个线程对象的`start()`方法只能调用一次，否则会抛出`IllegalThreadStateException`异常 |
-|               |  void   | run()                     | 线程启动后调用该方法                                         | 如果在构造`Thread`对象时传入了`Runnable`实现类对象，则线程启动后会运行该对象的`run()`方法。<br>如果构造器未传入参数，则默认不执行任何操作（见`Thread#run()`方法的源码），可以继承`Thread`并重写`run`方法，来覆盖默认行为。 |
-|               |  void   | setName(String name)      | 给当前线程取名字                                             |                                                              |
-|               |  void   | getName()                 | 获取当前线程的名字<br />线程存在默认名称：子线程是 Thread-索引，主线程是 main |                                                              |
-|    static     | Thread  | currentThread()           | 获取当前线程对象，代码在哪个线程中执行                       |                                                              |
-|    static     |  void   | sleep(long time)          | 让当前线程休眠多少毫秒再继续执行<br />**Thread.sleep(0)** : 让操作系统立刻重新进行一次 CPU 竞争 |                                                              |
-| static native |  void   | yield()                   | 提示线程调度器让出当前线程对 CPU 的使用                      |                                                              |
-|     final     |   int   | getPriority()             | 返回此线程的优先级                                           |                                                              |
-|     final     |  void   | setPriority(int priority) | 更改此线程的优先级，常用 1 5 10                              | `java`中规定线程优先级是`1~10` 的整数，较大的优先级能提高该线程被`CPU`调度的机率 |
-|               |  State  | getState()                | 获取当前线程的状态                                           | State: NEW, RUNNABLE, BLOCKED, WAITING, TIMED_WAITING, TERMINATED |
-|               |  void   | interrupt()               | 中断这个线程，异常处理机制                                   |                                                              |
-|               | boolean | isInterrupted()           | 判断当前线程是否被打断，不清除打断标记                       |                                                              |
-|    static     | boolean | interrupted()             | 判断当前线程是否被打断，清除打断标记                         |                                                              |
-|     fianl     |  void   | join()                    | 等待这个线程结束                                             |                                                              |
-|     final     |  void   | join(long millis)         | 等待这个线程死亡 millis 毫秒，0 意味着永远等待               |                                                              |
-| final native  | boolean | isAlive()                 | 线程是否存活（还没有运行完毕）                               |                                                              |
-|     fianl     |  void   | setDaemon(boolean on)     | 将此线程标记为守护线程或用户线程                             |                                                              |
-
-
-
-***
-
-
-
-##### run和start
-
-```java
-/**
- * 测试调用 start 和 run 方法的区别
- */
-@Slf4j(topic = "c.StartAndRun")
-public class StartAndRun {
-    /**
-     * 用于测试: Thread#Run()
-     */
-    @Test
-    public void testRun() {
-        Thread t1 = new Thread("t1") {
-            @Override
-            public void run() {
-                log.debug("running...");
-            }
-        };
-        t1.run(); // 同步调用，仍然是 main 线程调用的 run 方法
-        log.debug("running...");
-    }
-
-
-    /**
-     * 用于测试: Thread#start()
-     */
-    @Test
-    public void testStart() {
-        Thread t2 = new Thread("t2") {
-            @Override
-            public void run() {
-                log.debug("running...");
-            }
-        };
-        t2.start(); // 异步调用，由t2线程调用run方法
-        log.debug("running...");
-    }
-}
-```
-
-
-
-`run()`：称为线程体，包含了要执行的这个线程的内容，方法运行结束，此线程随即终止。直接调用`run()`是在「主线程」中执行了`run()`，没有启动新的线程，需要顺序执行。
-
-`start()`：使用`start()`是启动新的线程，此线程处于就绪（可运行）状态，通过新的线程间接执行`run`中的代码的
-
-说明：**线程控制资源类**
-
-`run()`方法中的异常不能抛出，只能`try/catch`
-
-* 因为父类中没有抛出任何异常，子类不能比父类抛出更多的异常
-* **异常不能跨线程传播回 main() 中**，因此必须在本地进行处理
-
-
-
-***
-
-
-
-##### sleep和yield
-
-###### sleep
-
-* 调用 `sleep()` 会让当前线程从`Running`进入`Timed Waiting`状态（阻塞）
-
-  ```java
-  @Slf4j(topic = "c.TestSleep")
-  public class TestSleep {
-  
-      /**
-       * 测试 sleep 前后线程状态的变化
-       */
-      @Test
-      public static void test1(String[] args) {
-          Thread t1 = new Thread("t1") {
-              @Override
-              public void run() {
-                  try {
-                      Thread.sleep(1000);
-                  } catch (InterruptedException e) {
-                      log.debug("{} interrupted",Thread.currentThread().getName());
-                  }
-              }
-          };
-          log.debug("t1 status: {}", t1.getState());    // t1 status: NEW
-          t1.start();
-          log.debug("t1 status: {}", t1.getState());    // t1 status: RUNNABLE
-          try {
-              Thread.sleep(500);
-          } catch (InterruptedException e) {
-              log.debug("{} interrupted",Thread.currentThread().getName());
-          }
-          log.debug("t1 status: {}", t1.getState());   // t1 status: TIMED_WAITING
-      }
-  }
-  ```
-
-* `sleep()` 方法的过程中，**线程不会释放对象锁**
-
-* 其它线程可以使用 `interrupt` 方法打断正在睡眠的线程，这时 `sleep()` 方法会抛出 `InterruptedException`
-
-* 睡眠结束后的线程未必会立刻得到执行，需要抢占 CPU
-
-* **建议用 `TimeUnit#sleep`代替 `Thread#sleep()`来获得更好的可读性**
-
-  ```java
-  @SneakyThrows
-  @Test
-  public void test3() {
-      Thread t3 = new Thread("t3") {
-          @SneakyThrows
-          @Override
-          public void run() {
-              log.debug("enter sleep...");
-              TimeUnit.SECONDS.sleep(1);  // 睡眠 1s
-              log.debug("wake up");
-          }
-      };
-      t3.start();
-      t3.join();  // 不加 join，则 main 线程执行完毕后直接退出，不会输出 wake up
-  }
-  ```
-
-###### yield
-
-* 调用`yield()`会让提示线程调度器让出当前线程对 CPU 的使用，使得当前线程从`Running`进入`Runnable`状态。
-* 具体的实现依赖于操作系统的任务调度器。
-* **会放弃 CPU 资源，锁资源不会释放。**
-
-
-
-***
-
-
-
-##### join
-
-`public final void join()`：等待这个线程结束
-
-原理：调用者轮询检查线程 alive 状态，t1.join() 等价于：
-
-```java
-public final synchronized void join(long millis) throws InterruptedException {
-    // 调用者线程进入 thread 的 waitSet 等待, 直到当前线程运行结束
-    while (isAlive()) {
-        wait(0);
-    }
-}
-```
-
-* join 方法是被 synchronized 修饰的，本质上是一个对象锁，其内部的 wait 方法调用也是释放锁的，但是**释放的是当前的线程对象锁，而不是外面的锁**
-
-* 当调用某个线程（t1）的 join 方法后，该线程（t1）抢占到 CPU 资源，就不再释放，直到线程执行完毕
-
-线程同步：
-
-* join 实现线程同步，因为会阻塞等待另一个线程的结束，才能继续向下运行
-  * 需要外部共享变量，不符合面向对象封装的思想
-  * 必须等待线程结束，不能配合线程池使用
-* Future 实现（同步）：get() 方法阻塞等待执行结果
-  * main 线程接收结果
-  * get 方法是让调用线程同步等待
-
-```java
-public class Test {
-    static int r = 0;
-    public static void main(String[] args) throws InterruptedException {
-        test1();
-    }
-    private static void test1() throws InterruptedException {
-        Thread t1 = new Thread(() -> {
-            try {
-                Thread.sleep(1000);
-            } catch (InterruptedException e) {
-                e.printStackTrace();
-            }
-            r = 10;
-        });
-        t1.start();
-        t1.join();//等待线程执行结束，输出的10
-        System.out.println(r);
-    }
-}
-```
-
-
-
-***
-
-
-
-##### interrupt
-
-###### 打断线程
-
-`public void interrupt()`：打断这个线程，异常处理机制
-
-`public static boolean interrupted()`：判断当前线程是否被打断，打断返回 true，**清除打断标记**，连续调用两次一定返回 false
-
-`public boolean isInterrupted()`：判断当前线程是否被打断，不清除打断标记
-
-打断的线程会发生上下文切换，操作系统会保存线程信息，抢占到 CPU 后会从中断的地方接着运行（打断不是停止）
-
-* sleep、wait、join 方法都会让线程进入阻塞状态，打断线程**会清空打断状态**（false）
-
-  ```java
-  // 案例1：sleep，wait, join 被 interrupt 打断时，会将打断标记重置为 false
-  private static void method1() throws InterruptedException {
-      Thread t1 = new Thread(() -> {
-          try {
-              log.debug("sleep...");
-              Thread.sleep(5000);
-          } catch (InterruptedException e) {
-              // sleep，wait, join 被打断后会在异常处理期间将打断标记置位 false;
-              e.printStackTrace();
-          }
-      }, "t1");
-  
-      t1.start();
-      Thread.sleep(1000);
-      log.debug("interrupting...");
-      t1.interrupt();
-      // Thread.sleep(1000);
-      // 如果输出在异常处理之前，则打断标记为true，如果输出在异常处理之后，则打断标记为false，可以通过打开上一行代码进行测试
-      log.debug("flag of interrupted sleep: {}", t1.isInterrupted());
-  }
-  ```
-  
-* 打断正常运行的线程：不会清空打断状态（true）
-
-  ```java
-  // 案例2：正常运行的代码被打断时，打断标记为 true，不会重置
-  private static void method2() throws InterruptedException {
-      Thread t1 = new Thread(() -> {
-          for (; ; ) {
-              Thread ct = Thread.currentThread();
-              if (ct.isInterrupted()) {  // isInterrupted 调用后，不会重置打断标记
-                  log.debug("interrupted: {}", ct.isInterrupted());
-                  break;
-              }
-          }
-      }, "t1");
-      t1.start();
-      Thread.sleep(1000);
-      t1.interrupt();
-  }
-  ```
-
-
-
-***
-
-
-
-###### 打断 park
-
-park 作用类似 sleep，打断 park 线程，不会清空打断状态（true）
-
-```java
-// 案例3：Thread.interrupted() 和 LockSupport.park()
-// LockSupport.park() 与 Thread#sleep() 方法类似，使当前线程进入休眠，除非打断标记为true。
-// Thread.interrupted() 会返回当前线程的打断标记，并重写置为 false。
-// 上面两个方法配合使用：
-private static void method3() throws InterruptedException {
-    Thread t1 = new Thread(() -> {
-
-        log.debug("park1...");
-        LockSupport.park();
-        log.debug("unpark1...");
-        Thread ct = Thread.currentThread();
-        // log.debug("打断标记: {}", ct.isInterrupted());  // true，不重置为 false，后面再调用 park 则不会生效
-        log.debug("打断标记: {}", Thread.interrupted()); // true，重置为 false，后面再调用 park 依然生效
-
-        log.debug("park2...");
-        LockSupport.park();
-        log.debug("unpark2...");
-
-    }, "t1");
-
-
-    t1.start();
-    TimeUnit.SECONDS.sleep(1);
-    t1.interrupt();
-}
-```
-
-
-
-LockSupport 类在 同步 → park-un 详解
-
-
-
-***
-
-
-
-###### 终止模式
-
-终止模式之两阶段终止模式：Two Phase Termination
-
-目标：在一个线程 T1 中如何优雅终止线程 T2？优雅指的是给 T2 一个后置处理器
-
-错误思想：
-
-* 使用线程对象的 stop() 方法停止线程：stop 方法会真正杀死线程，如果这时线程锁住了共享资源，当它被杀死后就再也没有机会释放锁，其它线程将永远无法获取锁
-* 使用 System.exit(int) 方法停止线程：目的仅是停止一个线程，但这种做法会让整个程序都停止
-
-两阶段终止模式图示：
-
-<img src="https://seazean.oss-cn-beijing.aliyuncs.com/img/Java/JUC-两阶段终止模式.png" style="zoom: 67%;" />
-
-打断线程可能在任何时间，所以需要考虑在任何时刻被打断的处理方法：
-
-```java
-public class Test {
-    public static void main(String[] args) throws InterruptedException {
-        TwoPhaseTermination tpt = new TwoPhaseTermination();
-        tpt.start();
-        Thread.sleep(3500);
-        tpt.stop();
-    }
-}
-class TwoPhaseTermination {
-    private Thread monitor;
-    // 启动监控线程
-    public void start() {
-        monitor = new Thread(new Runnable() {
-            @Override
-            public void run() {
-                while (true) {
-                    Thread thread = Thread.currentThread();
-                    if (thread.isInterrupted()) {
-                        System.out.println("后置处理");
-                        break;
-                    }
-                    try {
-                        Thread.sleep(1000);					// 睡眠
-                        System.out.println("执行监控记录");	// 在此被打断不会异常
-                    } catch (InterruptedException e) {		// 在睡眠期间被打断，进入异常处理的逻辑
-                        e.printStackTrace();
-                        // 重新设置打断标记，打断 sleep 会清除打断状态
-                        thread.interrupt();
-                    }
-                }
-            }
-        });
-        monitor.start();
-    }
-    // 停止监控线程
-    public void stop() {
-        monitor.interrupt();
-    }
-}
-```
-
-
-
-***
-
-#### 不推荐
-
-不推荐使用的方法，这些方法已过时，容易破坏同步代码块，造成线程死锁：
-
-* `public final void stop()`：停止线程运行
-
-  废弃原因：方法粗暴，除非可能执行 finally 代码块以及释放 synchronized 外，线程将直接被终止，如果线程持有 JUC 的互斥锁可能导致锁来不及释放，造成其他线程永远等待的局面
-
-* `public final void suspend()`：**挂起（暂停）线程运行**
-
-  废弃原因：如果目标线程在暂停时对系统资源持有锁，则在目标线程恢复之前没有线程可以访问该资源，如果**恢复目标线程的线程**在调用 resume 之前会尝试访问此共享资源，则会导致死锁
-
-* `public final void resume()`：恢复线程运行
-
-
-
-***
-
-### 主线程和守护线程
-
-
-
-默认情况下，Java 进程需要等待所有线程都运行结束，才会结束。有一种特殊的线程叫做「守护线程」，只要其它「非守护线程」运行结束了，即使守护线程的代码没有执行完，也会强制结束。  
-
-`public final void setDaemon(boolean on)`：如果是 true ，将此线程标记为守护线程 
-
-线程「启动前」调用此方法：
-
-```java
-// 只有当所有「非守护线程」执行完毕后，java进程才会结束。
-public static void main(String[] args) {
-    Thread t1 = new Thread(() -> {
-        while (true) {
-            Thread ct = Thread.currentThread();
-            if (ct.isInterrupted()) {
-                break;
-            }
-        }
-        log.debug("end");
-    }, "t1");
-
-    t1.setDaemon(true); // 设置 t1 为守护线程
-    t1.start();
-    log.debug("end");
-}
-```
-
-
-
-用户线程：平常创建的普通线程
-
-守护线程：服务于用户线程，只要其它非守护线程运行结束了，即使守护线程代码没有执行完，也会强制结束。守护进程是**脱离于终端并且在后台运行的进程**，脱离终端是为了避免在执行的过程中的信息在终端上显示
-
-说明：当运行的线程都是守护线程，Java 虚拟机将退出，因为普通线程执行完后，JVM 是守护线程，不会继续运行下去
-
-常见的守护线程：
-
-* 垃圾回收器线程就是一种守护线程
-* Tomcat 中的 Acceptor 和 Poller 线程都是守护线程，所以 Tomcat 接收到 shutdown 命令后，不会等待它们处理完当前请求
-
-***
-
-
-
-### 线程原理
-
-#### 运行机制
-
-Java Virtual Machine Stacks（Java 虚拟机栈）：每个线程启动后，虚拟机就会为其分配一块栈内存
-
-* 每个栈由多个栈帧（Frame）组成，对应着每次方法调用时所占用的内存
-* 每个线程只能有一个活动**栈帧**，对应着当前正在执行的那个方法
-* [栈帧图解](https://www.bilibili.com/video/BV16J411h7Rd?p=21&spm_id_from=pageDriver&vd_source=1c6a218df24b9f08b6dd48151a75b178)
-
-
-
-**线程上下文切换**（Thread Context Switch）：一些原因导致 CPU 不再执行当前线程，转而执行另一个线程
-
-* 线程的 CPU 时间片用完
-* 垃圾回收
-* 有更高优先级的线程需要运行
-* 线程自己调用了 `sleep、yield、wait、join、park` 等方法
-* [图解上下文切换（06:00 后）](https://www.bilibili.com/video/BV16J411h7Rd?p=21&spm_id_from=pageDriver&vd_source=1c6a218df24b9f08b6dd48151a75b178)
-
-
-
-**程序计数器**（Program Counter Register）：记住下一条 JVM 指令的执行地址，是线程私有的当 Context Switch 发生时，需要由操作系统保存当前线程的状态（保存在PCB进程控制块中），并恢复另一个线程的状态，包括程序计数器、虚拟机栈中每个栈帧的信息，如局部变量、操作数栈、返回地址等
-
-
-
-JVM 规范并没有限定线程模型，以 HotSopot 为例：
-
-* Java 的线程是内核级线程（1:1 线程模型），每个 Java 线程都映射到一个操作系统原生线程，需要消耗一定的内核资源（堆栈）
-* **线程的调度是在内核态运行的，而线程中的代码是在用户态运行**，所以线程切换（状态改变）会导致用户与内核态转换进行系统调用，这是非常消耗性能
-
-Java 中 main 方法启动的是一个进程也是一个主线程，main 方法里面的其他线程均为子线程，main 线程是这些线程的父线程
-
-
-
-***
-
-
-
-#### 线程调度
-
-线程调度指系统为线程分配处理器使用权的过程，方式有两种：「协同式线程调度」、「抢占式线程调度」（Java 选择）
-
-协同式线程调度：线程的执行时间由线程本身控制
-
-* 优点：线程做完任务才通知系统切换到其他线程，相当于所有线程串行执行，不会出现线程同步问题
-* 缺点：线程执行时间不可控，如果代码编写出现问题，可能导致程序一直阻塞，引起系统的奔溃
-
-抢占式线程调度：线程的执行时间由系统分配
-
-* 优点：线程执行时间可控，不会因为一个线程的问题而导致整体系统不可用
-* 缺点：无法主动为某个线程多分配时间
-
-Java 提供了线程优先级的机制，优先级会提示（hint）调度器优先调度该线程，但这仅仅是一个提示，调度器可以忽略它。在线程的就绪状态时，如果 CPU 比较忙，那么优先级高的线程会获得更多的时间片，但 CPU 闲时，优先级几乎没作用
-
-说明：并不能通过优先级来判断线程执行的先后顺序
-
-
-
-***
-
-
-
-#### 未来优化
-
-内核级线程调度的成本较大，所以引入了更轻量级的协程。用户线程的调度由用户自己实现（一对多的线程模型），被设计为协同式调度，所以叫协程
-
-* 有栈协程：协程会完整的做调用栈的保护、恢复工作，所以叫有栈协程
-* 无栈协程：本质上是一种有限状态机，状态保存在闭包里，比有栈协程更轻量，但是功能有限
-
-有栈协程中有一种特例叫纤程，在新并发模型中，一段纤程的代码被分为两部分，执行过程和调度器：
-
-* 执行过程：用于维护执行现场，保护、恢复上下文状态
-* 调度器：负责编排所有要执行的代码顺序
-
-
-
-****
-
-
-
-### 线程状态
-
-#### 五状态模型
-
-从「操作系统」层面来描述线程的状态，可以分为5种，称作「五状态模型」
-
-![image-20211204224132942](https://yrc-img.oss-cn-hangzhou.aliyuncs.com/img/image-20211204224132942.png)
-
-##### 创建状态
-
-- 创建进程时拥有PCB但其它资源尚未就绪的状态称为「创建状态」。
-
-- 其它资源：进程控制块、堆空间、栈空间…
-
-![image-20211204225423950](https://yrc-img.oss-cn-hangzhou.aliyuncs.com/img/image-20211204225423950.png)
-
-##### 就绪状态
-
-- 当进程被分配到除CPU以外的所有必要资源后，进程就进入了「就绪状态」。
-
-- 只要再获取到CPU的使用权，就可以立即运行。
-
-- 就绪队列
-
-  > 在一个系统中可以多个进程并发的执行，这就意味着当系统中有多个处于就绪状态的进程时，通常会排成一个队列，也称作**就绪队列**。
-
-  ![image-20211204224604997](https://yrc-img.oss-cn-hangzhou.aliyuncs.com/img/image-20211204224604997.png)
-
-##### 执行状态
-
-- 进程获得CPU资源时，其程序正在执行就称为「执行状态」。
-- 在单处理机（单核cpu）中，在某个时刻只能由一个进程是处于执行状态。
-
-##### 阻塞状态
-
-进程因为某种原因（如：其它设备未就绪而无法继续执行），从而放弃CPU的状态称为「阻塞状态」。
-
-- 阻塞队列
-
-  ![image-20211204225109513](https://yrc-img.oss-cn-hangzhou.aliyuncs.com/img/image-20211204225109513.png)
-
-![image-20211204225245976](https://yrc-img.oss-cn-hangzhou.aliyuncs.com/img/image-20211204225245976.png)
-
-##### 终止状态
-
-进程结束由系统清理或者归还PCB的状态称为「终止状态」。
-
-![image-20211204225520928](https://yrc-img.oss-cn-hangzhou.aliyuncs.com/img/image-20211204225520928.png)
-
-
-
-
-
-#### 六状态模型
-
-这是从 `Java API` 层面来描述的，根据 `Thread.State` 枚举，分为六种状态  
-
-线程由生到死的完整过程（生命周期）：当线程被创建并启动以后，既不是一启动就进入了执行状态，也不是一直处于执行状态，在 API 中 `java.lang.Thread.State` 这个枚举中给出了六种线程状态：
-
-| 线程状态                   | 导致状态发生条件                                             |
-| -------------------------- | ------------------------------------------------------------ |
-| NEW（新建）                | 线程刚被创建，但是并未启动，还没调用 start 方法，只有线程对象，没有线程特征 |
-| Runnable（可运行）         | 当调用了 start() 方法之后，线程可以在 Java 虚拟机中运行的状态。注意，Java API 层面的 RUNNABLE 状态涵盖了**操作系统**层面的「就绪状态」、「执行状态」和「阻塞状态」（由于 BIO 导致的线程阻塞，在 Java 里无法区分，仍然认为是可运行） |
-| Blocked（阻塞）            | 当一个线程试图获取一个对象锁，而该对象锁被其他的线程持有，则该线程进入 Blocked 状态；当该线程持有锁时，该线程将变成 Runnable 状态 |
-| Waiting（无限等待）        | 一个线程在等待另一个线程执行一个（唤醒）动作时，该线程进入 Waiting 状态，进入这个状态后不能自动唤醒，必须等待另一个线程调用 notify 或者 notifyAll 方法才能唤醒 |
-| Timed Waiting （限期等待） | 有几个方法有超时参数，调用将进入 Timed Waiting 状态，这一状态将一直保持到超时期满或者接收到唤醒通知。带有超时参数的常用方法有 Thread.sleep 、Object.wait |
-| Teminated（结束）          | run 方法正常退出而死亡，或者因为没有捕获的异常终止了 run 方法而死亡 |
-
-![](https://seazean.oss-cn-beijing.aliyuncs.com/img/Java/JUC-线程6种状态.png)
-
-* NEW → RUNNABLE：当调用 t.start() 方法时，由 NEW → RUNNABLE
-
-* RUNNABLE <--> WAITING：
-
-  * 调用 obj.wait() 方法时
-
-    调用 obj.notify()、obj.notifyAll()、t.interrupt()：
-
-    * 竞争锁成功，t 线程从 WAITING → RUNNABLE
-    * 竞争锁失败，t 线程从 WAITING → BLOCKED
-
-  * 当前线程调用 t.join() 方法，注意是当前线程在 t 线程对象的监视器上等待
-
-  * 当前线程调用 LockSupport.park() 方法
-
-* RUNNABLE <--> TIMED_WAITING：调用 obj.wait(long n) 方法、当前线程调用 t.join(long n) 方法、当前线程调用 Thread.sleep(long n)
-
-* RUNNABLE <--> BLOCKED：t 线程用 synchronized(obj) 获取了对象锁时竞争失败
-
-
-
-***
-
-
-
-### 查看线程
-
-Windows：
-
-* 任务管理器可以查看进程和线程数，也可以用来杀死进程
-* tasklist 查看进程
-* taskkill 杀死进程
-
-Linux：
-
-* ps -ef 查看所有进程
-* ps -fT -p <PID> 查看某个进程（PID）的所有线程
-* kill 杀死进程
-* top 按大写 H 切换是否显示线程
-* top -H -p <PID> 查看某个进程（PID）的所有线程
-
-Java：
-
-* jps 命令查看所有 Java 进程
-* jstack <PID> 查看某个 Java 进程（PID）的所有线程状态
-* jconsole 来查看某个 Java 进程中线程的运行情况（图形界面）
-
-
-
-
-
-***
-
-
-
-
-
-## 同步
-
-### 临界区
-
-临界资源：一次仅允许一个进程使用的资源成为临界资源
-
-临界区：访问临界资源的代码块
-
-竞态条件：多个线程在临界区内执行，由于代码的执行序列不同而导致结果无法预测，称之为发生了竞态条件
-
-一个程序运行多个线程是没有问题，多个线程读共享资源也没有问题，在多个线程对共享资源读写操作时发生指令交错，就会出现问题
-
-为了避免临界区的竞态条件发生（解决线程安全问题）：
-
-* 阻塞式的解决方案：synchronized，lock
-* 非阻塞式的解决方案：原子变量
-
-管程（monitor）：由局部于自己的若干公共变量和所有访问这些公共变量的过程所组成的软件模块，保证同一时刻只有一个进程在管程内活动，即管程内定义的操作在同一时刻只被一个进程调用（由编译器实现）
-
-**synchronized：对象锁，保证了临界区内代码的原子性**，采用互斥的方式让同一时刻至多只有一个线程能持有对象锁，其它线程获取这个对象锁时会阻塞，保证拥有锁的线程可以安全的执行临界区内的代码，不用担心线程上下文切换
-
-互斥和同步都可以采用 synchronized 关键字来完成，区别：
-
-* 互斥是保证临界区的竞态条件发生，同一时刻只能有一个线程执行临界区代码
-* 同步是由于线程执行的先后、顺序不同、需要一个线程等待其它线程运行到某个点
-
-性能：
-
-* 线程安全，性能差
-* 线程不安全性能好，假如开发中不会存在多线程安全问题，建议使用线程不安全的设计类
-
-
-
-***
-
-
-
-### syn-ed
-
-#### 使用锁
-
-##### 同步块
-
-锁对象：理论上可以是**任意的唯一对象**
-
-synchronized 是可重入、不公平的重量级锁
-
-原则上：
-
-* 锁对象建议使用共享资源
-* 在实例方法中使用 this 作为锁对象，锁住的 this 正好是共享资源
-* 在静态方法中使用类名 .class 字节码作为锁对象，因为静态成员属于类，被所有实例对象共享，所以需要锁住类
-
-同步代码块格式：
-
-```java
-synchronized(锁对象){
-	// 访问共享资源的核心代码
-}
-```
-
-实例：
-
-```java
-public class demo {
-    static int counter = 0;
-    //static修饰，则元素是属于类本身的，不属于对象  ，与类一起加载一次，只有一个
-    static final Object room = new Object();
-    public static void main(String[] args) throws InterruptedException {
-        Thread t1 = new Thread(() -> {
-            for (int i = 0; i < 5000; i++) {
-                synchronized (room) {
-                    counter++;
-                }
-            }
-        }, "t1");
-        Thread t2 = new Thread(() -> {
-            for (int i = 0; i < 5000; i++) {
-                synchronized (room) {
-                    counter--;
-                }
-            }
-        }, "t2");
-        t1.start();
-        t2.start();
-        t1.join();
-        t2.join();
-        System.out.println(counter);
-    }
-}
-```
-
-
-
-***
-
-
-
-##### 同步方法
-
-把出现线程安全问题的核心方法锁起来，每次只能一个线程进入访问
-
-synchronized 修饰的方法的不具备继承性，所以子类是线程不安全的，如果子类的方法也被 synchronized 修饰，两个锁对象其实是一把锁，而且是**子类对象作为锁**
-
-用法：直接给方法加上一个修饰符 synchronized
-
-```java
-//同步方法
-修饰符 synchronized 返回值类型 方法名(方法参数) { 
-	方法体；
-}
-//同步静态方法
-修饰符 static synchronized 返回值类型 方法名(方法参数) { 
-	方法体；
-}
-```
-
-同步方法底层也是有锁对象的：
-
-* 如果方法是实例方法：同步方法默认用 this 作为的锁对象
-
-  ```java
-  public synchronized void test() {} //等价于
-  public void test() {
-      synchronized(this) {}
-  }
-  ```
-
-* 如果方法是静态方法：同步方法默认用类名 .class 作为的锁对象
-
-  ```java
-  class Test{
-  	public synchronized static void test() {}
-  }
-  //等价于
-  class Test{
-      public void test() {
-          synchronized(Test.class) {}
-  	}
-  }
-  ```
-
-
-
-***
-
-
-
-##### 线程八锁
-
-线程八锁就是考察 synchronized 锁住的是哪个对象，直接百度搜索相关的实例
-
-说明：主要关注锁住的对象是不是同一个
-
-* 锁住类对象，所有类的实例的方法都是安全的，类的所有实例都相当于同一把锁
-* 锁住 this 对象，只有在当前实例对象的线程内是安全的，如果有多个实例就不安全
-
-线程不安全：因为锁住的不是同一个对象，线程 1 调用 a 方法锁住的类对象，线程 2 调用 b 方法锁住的 n2 对象，不是同一个对象
-
-```java
-class Number{
-    public static synchronized void a(){
-		Thread.sleep(1000);
-        System.out.println("1");
-    }
-    public synchronized void b() {
-        System.out.println("2");
-    }
-}
-public static void main(String[] args) {
-    Number n1 = new Number();
-    Number n2 = new Number();
-    new Thread(()->{ n1.a(); }).start();
-    new Thread(()->{ n2.b(); }).start();
-}
-```
-
-线程安全：因为 n1 调用 a() 方法，锁住的是类对象，n2 调用 b() 方法，锁住的也是类对象，所以线程安全
-
-```java
-class Number{
-    public static synchronized void a(){
-		Thread.sleep(1000);
-        System.out.println("1");
-    }
-    public static synchronized void b() {
-        System.out.println("2");
-    }
-}
-public static void main(String[] args) {
-    Number n1 = new Number();
-    Number n2 = new Number();
-    new Thread(()->{ n1.a(); }).start();
-    new Thread(()->{ n2.b(); }).start();
-}
-```
-
-
-
-
-
-***
-
-
-
-#### 锁原理
-
-##### Monitor
-
-Monitor 被翻译为监视器或管程
-
-每个 Java 对象都可以关联一个 Monitor 对象，Monitor 也是 class，其**实例存储在堆中**，如果使用 synchronized 给对象上锁（重量级）之后，该对象头的 Mark Word 中就被设置指向 Monitor 对象的指针，这就是重量级锁
-
-* Mark Word 结构：最后两位是**锁标志位**
-
-  ![](https://seazean.oss-cn-beijing.aliyuncs.com/img/Java/JUC-Monitor-MarkWord结构32位.png)
-
-* 64 位虚拟机 Mark Word：
-
-  ![](https://seazean.oss-cn-beijing.aliyuncs.com/img/Java/JUC-Monitor-MarkWord结构64位.png)
-
-工作流程：
-
-* 开始时 Monitor 中 Owner 为 null
-* 当 Thread-2 执行 synchronized(obj) 就会将 Monitor 的所有者 Owner 置为 Thread-2，Monitor 中只能有一个 Owner，**obj 对象的 Mark Word 指向 Monitor**，把**对象原有的 MarkWord 存入线程栈中的锁记录**中（轻量级锁部分详解）
-  <img src="https://seazean.oss-cn-beijing.aliyuncs.com/img/Java/JUC-Monitor工作原理1.png" style="zoom:67%;" />
-* 在 Thread-2 上锁的过程，Thread-3、Thread-4、Thread-5 也执行 synchronized(obj)，就会进入 EntryList BLOCKED（双向链表）
-* Thread-2 执行完同步代码块的内容，根据 obj 对象头中 Monitor 地址寻找，设置 Owner 为空，把线程栈的锁记录中的对象头的值设置回 MarkWord
-* 唤醒 EntryList 中等待的线程来竞争锁，竞争是**非公平的**，如果这时有新的线程想要获取锁，可能直接就抢占到了，阻塞队列的线程就会继续阻塞
-* WaitSet 中的 Thread-0，是以前获得过锁，但条件不满足进入 WAITING 状态的线程（wait-notify 机制）
-
-![](https://seazean.oss-cn-beijing.aliyuncs.com/img/Java/JUC-Monitor工作原理2.png)
-
-注意：
-
-* synchronized 必须是进入同一个对象的 Monitor 才有上述的效果
-* 不加 synchronized 的对象不会关联监视器，不遵从以上规则
-
-
-
-****
-
-
-
-##### 字节码
-
-代码：
-
-```java
-public static void main(String[] args) {
-    Object lock = new Object();
-    synchronized (lock) {
-        System.out.println("ok");
-    }
-}
-```
-
-```java
-0: 	new				#2		// new Object
-3: 	dup
-4: 	invokespecial 	#1 		// invokespecial <init>:()V，非虚方法
-7: 	astore_1 				// lock引用 -> lock
-8: 	aload_1					// lock （synchronized开始）
-9: 	dup						// 一份用来初始化，一份用来引用
-10: astore_2 				// lock引用 -> slot 2
-11: monitorenter 			// 【将 lock对象 MarkWord 置为 Monitor 指针】
-12: getstatic 		#3		// System.out
-15: ldc 			#4		// "ok"
-17: invokevirtual 	#5 		// invokevirtual println:(Ljava/lang/String;)V
-20: aload_2 				// slot 2(lock引用)
-21: monitorexit 			// 【将 lock对象 MarkWord 重置, 唤醒 EntryList】
-22: goto 30
-25: astore_3 				// any -> slot 3
-26: aload_2 				// slot 2(lock引用)
-27: monitorexit 			// 【将 lock对象 MarkWord 重置, 唤醒 EntryList】
-28: aload_3
-29: athrow
-30: return
-Exception table:
-    from to target type
-      12 22 25 		any
-      25 28 25 		any
-LineNumberTable: ...
-LocalVariableTable:
-    Start Length Slot Name Signature
-    	0 	31 		0 args [Ljava/lang/String;
-    	8 	23 		1 lock Ljava/lang/Object;
-```
-
-说明：
-
-* 通过异常 **try-catch 机制**，确保一定会被解锁
-* 方法级别的 synchronized 不会在字节码指令中有所体现
-
-
-
-***
-
-
-
-#### 锁升级
-
-##### 升级过程
-
-**synchronized 是可重入、不公平的重量级锁**，所以可以对其进行优化
-
-```java
-无锁 -> 偏向锁 -> 轻量级锁 -> 重量级锁	// 随着竞争的增加，只能锁升级，不能降级
-```
-
-![](https://seazean.oss-cn-beijing.aliyuncs.com/img/Java/JUC-锁升级过程.png)
-
-
-
-***
-
-
-
-##### 偏向锁
-
-偏向锁的思想是偏向于让第一个获取锁对象的线程，这个线程之后重新获取该锁不再需要同步操作：
-
-* 当锁对象第一次被线程获得的时候进入偏向状态，标记为 101，同时**使用 CAS 操作将线程 ID 记录到 Mark Word**。如果 CAS 操作成功，这个线程以后进入这个锁相关的同步块，查看这个线程 ID 是自己的就表示没有竞争，就不需要再进行任何同步操作
-
-* 当有另外一个线程去尝试获取这个锁对象时，偏向状态就宣告结束，此时撤销偏向（Revoke Bias）后恢复到未锁定或轻量级锁状态
-
-<img src="https://seazean.oss-cn-beijing.aliyuncs.com/img/Java/JUC-Monitor-MarkWord结构64位.png" style="zoom: 67%;" />
-
-一个对象创建时：
-
-* 如果开启了偏向锁（默认开启），那么对象创建后，MarkWord 值为 0x05 即最后 3 位为 101，thread、epoch、age 都为 0
-* 偏向锁是默认是延迟的，不会在程序启动时立即生效，如果想避免延迟，可以加 VM 参数 `-XX:BiasedLockingStartupDelay=0` 来禁用延迟。JDK 8 延迟 4s 开启偏向锁原因：在刚开始执行代码时，会有好多线程来抢锁，如果开偏向锁效率反而降低
-
-* 当一个对象已经计算过 hashCode，就再也无法进入偏向状态了
-* 添加 VM 参数 `-XX:-UseBiasedLocking` 禁用偏向锁
-
-撤销偏向锁的状态：
-
-* 调用对象的 hashCode：偏向锁的对象 MarkWord 中存储的是线程 id，调用 hashCode 导致偏向锁被撤销
-* 当有其它线程使用偏向锁对象时，会将偏向锁升级为轻量级锁
-* 调用 wait/notify，需要申请 Monitor，进入 WaitSet
-
-**批量撤销**：如果对象被多个线程访问，但没有竞争，这时偏向了线程 T1 的对象仍有机会重新偏向 T2，重偏向会重置对象的 Thread ID
-
-* 批量重偏向：当撤销偏向锁阈值超过 20 次后，JVM 会觉得是不是偏向错了，于是在给这些对象加锁时重新偏向至加锁线程
-
-* 批量撤销：当撤销偏向锁阈值超过 40 次后，JVM 会觉得自己确实偏向错了，根本就不该偏向，于是整个类的所有对象都会变为不可偏向的，新建的对象也是不可偏向的
-
-
-
-***
-
-
-
-##### 轻量级锁
-
-一个对象有多个线程要加锁，但加锁的时间是错开的（没有竞争），可以使用轻量级锁来优化，轻量级锁对使用者是透明的（不可见）
-
-可重入锁：线程可以进入任何一个它已经拥有的锁所同步着的代码块，可重入锁最大的作用是**避免死锁**
-
-轻量级锁在没有竞争时（锁重入时），每次重入仍然需要执行 CAS 操作，Java 6 才引入的偏向锁来优化
-
-锁重入实例：
-
-```java
-static final Object obj = new Object();
-public static void method1() {
-    synchronized( obj ) {
-        // 同步块 A
-        method2();
-    }
-}
-public static void method2() {
-    synchronized( obj ) {
-    	// 同步块 B
-    }
-}
-```
-
-* 创建锁记录（Lock Record）对象，每个线程的**栈帧**都会包含一个锁记录的结构，存储锁定对象的 Mark Word
-
-  ![](https://seazean.oss-cn-beijing.aliyuncs.com/img/Java/JUC-轻量级锁原理1.png)
-
-* 让锁记录中 Object reference 指向锁住的对象，并尝试用 CAS 替换 Object 的 Mark Word，将 Mark Word 的值存入锁记录
-  
-* 如果 CAS 替换成功，对象头中存储了锁记录地址和状态 00（轻量级锁） ，表示由该线程给对象加锁
-  ![](https://seazean.oss-cn-beijing.aliyuncs.com/img/Java/JUC-轻量级锁原理2.png)
-
-* 如果 CAS 失败，有两种情况：
-
-  * 如果是其它线程已经持有了该 Object 的轻量级锁，这时表明有竞争，进入锁膨胀过程
-  * 如果是线程自己执行了 synchronized 锁重入，就添加一条 Lock Record 作为重入的计数
-
-  ![](https://seazean.oss-cn-beijing.aliyuncs.com/img/Java/JUC-轻量级锁原理3.png)
-
-* 当退出 synchronized 代码块（解锁时）
-
-  * 如果有取值为 null 的锁记录，表示有重入，这时重置锁记录，表示重入计数减 1
-  * 如果锁记录的值不为 null，这时使用 CAS **将 Mark Word 的值恢复给对象头**
-    * 成功，则解锁成功
-    * 失败，说明轻量级锁进行了锁膨胀或已经升级为重量级锁，进入重量级锁解锁流程
-
-
-
-***
-
-
-
-##### 锁膨胀
-
-在尝试加轻量级锁的过程中，CAS 操作无法成功，可能是其它线程为此对象加上了轻量级锁（有竞争），这时需要进行锁膨胀，将轻量级锁变为**重量级锁**
-
-* 当 Thread-1 进行轻量级加锁时，Thread-0 已经对该对象加了轻量级锁
-
-  ![](https://seazean.oss-cn-beijing.aliyuncs.com/img/Java/JUC-重量级锁原理1.png)
-
-* Thread-1 加轻量级锁失败，进入锁膨胀流程：为 Object 对象申请 Monitor 锁，**通过 Object 对象头获取到持锁线程**，将 Monitor 的 Owner 置为 Thread-0，将 Object 的对象头指向重量级锁地址，然后自己进入 Monitor 的 EntryList BLOCKED
-
-  ![](https://seazean.oss-cn-beijing.aliyuncs.com/img/Java/JUC-重量级锁原理2.png)
-
-* 当 Thread-0 退出同步块解锁时，使用 CAS 将 Mark Word 的值恢复给对象头失败，这时进入重量级解锁流程，即按照 Monitor 地址找到 Monitor 对象，设置 Owner 为 null，唤醒 EntryList 中 BLOCKED 线程
-
-
-
-
-
-***
-
-
-
-#### 锁优化
-
-##### 自旋锁
-
-重量级锁竞争时，尝试获取锁的线程不会立即阻塞，可以使用**自旋**（默认 10 次）来进行优化，采用循环的方式去尝试获取锁
-
-注意：
-
-* 自旋占用 CPU 时间，单核 CPU 自旋就是浪费时间，因为同一时刻只能运行一个线程，多核 CPU 自旋才能发挥优势
-* 自旋失败的线程会进入阻塞状态
-
-优点：不会进入阻塞状态，**减少线程上下文切换的消耗**
-
-缺点：当自旋的线程越来越多时，会不断的消耗 CPU 资源
-
-自旋锁情况：
-
-* 自旋成功的情况：
-      <img src="https://seazean.oss-cn-beijing.aliyuncs.com/img/Java/JUC-自旋成功.png" style="zoom: 80%;" />
-
-* 自旋失败的情况：
-
-  <img src="https://seazean.oss-cn-beijing.aliyuncs.com/img/Java/JUC-自旋失败.png" style="zoom:80%;" />
-
-自旋锁说明：
-
-* 在 Java 6 之后自旋锁是自适应的，比如对象刚刚的一次自旋操作成功过，那么认为这次自旋成功的可能性会高，就多自旋几次；反之，就少自旋甚至不自旋，比较智能
-* Java 7 之后不能控制是否开启自旋功能，由 JVM 控制
-
-```java
-//手写自旋锁
-public class SpinLock {
-    // 泛型装的是Thread，原子引用线程
-    AtomicReference<Thread> atomicReference = new AtomicReference<>();
-
-    public void lock() {
-        Thread thread = Thread.currentThread();
-        System.out.println(thread.getName() + " come in");
-
-        //开始自旋，期望值为null，更新值是当前线程
-        while (!atomicReference.compareAndSet(null, thread)) {
-            Thread.sleep(1000);
-            System.out.println(thread.getName() + " 正在自旋");
-        }
-        System.out.println(thread.getName() + " 自旋成功");
-    }
-
-    public void unlock() {
-        Thread thread = Thread.currentThread();
-
-        //线程使用完锁把引用变为null
-		atomicReference.compareAndSet(thread, null);
-        System.out.println(thread.getName() + " invoke unlock");
-    }
-
-    public static void main(String[] args) throws InterruptedException {
-        SpinLock lock = new SpinLock();
-        new Thread(() -> {
-            //占有锁
-            lock.lock();
-            Thread.sleep(10000); 
-
-            //释放锁
-            lock.unlock();
-        },"t1").start();
-
-        // 让main线程暂停1秒，使得t1线程，先执行
-        Thread.sleep(1000);
-
-        new Thread(() -> {
-            lock.lock();
-            lock.unlock();
-        },"t2").start();
-    }
-}
-```
-
-
-
-
-
-***
-
-
-
-##### 锁消除
-
-锁消除是指对于被检测出不可能存在竞争的共享数据的锁进行消除，这是 JVM **即时编译器的优化**
-
-锁消除主要是通过**逃逸分析**来支持，如果堆上的共享数据不可能逃逸出去被其它线程访问到，那么就可以把它们当成私有数据对待，也就可以将它们的锁进行消除（同步消除：JVM 逃逸分析）
-
-
-
-***
-
-
-
-##### 锁粗化
-
-对相同对象多次加锁，导致线程发生多次重入，频繁的加锁操作就会导致性能损耗，可以使用锁粗化方式优化
-
-如果虚拟机探测到一串的操作都对同一个对象加锁，将会把加锁的范围扩展（粗化）到整个操作序列的外部
-
-* 一些看起来没有加锁的代码，其实隐式的加了很多锁：
-
-  ```java
-  public static String concatString(String s1, String s2, String s3) {
-      return s1 + s2 + s3;
-  }
-  ```
-
-* String 是一个不可变的类，编译器会对 String 的拼接自动优化。在 JDK 1.5 之前，转化为 StringBuffer 对象的连续 append() 操作，每个 append() 方法中都有一个同步块
-
-  ```java
-  public static String concatString(String s1, String s2, String s3) {
-      StringBuffer sb = new StringBuffer();
-      sb.append(s1);
-      sb.append(s2);
-      sb.append(s3);
-      return sb.toString();
-  }
-  ```
-
-扩展到第一个 append() 操作之前直至最后一个 append() 操作之后，只需要加锁一次就可以
-
-
-
-****
-
-
-
-#### 多把锁
-
-多把不相干的锁：一间大屋子有两个功能睡觉、学习，互不相干。现在一人要学习，一人要睡觉，如果只用一间屋子（一个对象锁）的话，那么并发度很低
-
-将锁的粒度细分：
-
-* 好处，是可以增强并发度
-* 坏处，如果一个线程需要同时获得多把锁，就容易发生死锁 
-
-解决方法：准备多个对象锁
-
-```java
-public static void main(String[] args) {
-    BigRoom bigRoom = new BigRoom();
-    new Thread(() -> { bigRoom.study(); }).start();
-    new Thread(() -> { bigRoom.sleep(); }).start();
-}
-class BigRoom {
-    private final Object studyRoom = new Object();
-    private final Object sleepRoom = new Object();
-
-    public void sleep() throws InterruptedException {
-        synchronized (sleepRoom) {
-            System.out.println("sleeping 2 小时");
-            Thread.sleep(2000);
-        }
-    }
-
-    public void study() throws InterruptedException {
-        synchronized (studyRoom) {
-            System.out.println("study 1 小时");
-            Thread.sleep(1000);
-        }
-    }
-}
-```
-
-
-
-***
-
-
-
-#### 活跃性
-
-##### 死锁
-
-###### 形成
-
-死锁：多个线程同时被阻塞，它们中的一个或者全部都在等待某个资源被释放，由于线程被无限期地阻塞，因此程序不可能正常终止
-
-Java 死锁产生的四个必要条件：
-
-1. 互斥条件，即当资源被一个线程使用（占有）时，别的线程不能使用
-2. 不可剥夺条件，资源请求者不能强制从资源占有者手中夺取资源，资源只能由资源占有者主动释放
-3. 请求和保持条件，即当资源请求者在请求其他的资源的同时保持对原有资源的占有
-4. 循环等待条件，即存在一个等待循环队列：p1 要 p2 的资源，p2 要 p1 的资源，形成了一个等待环路
-
-四个条件都成立的时候，便形成死锁。死锁情况下打破上述任何一个条件，便可让死锁消失
-
-```java
-public class Dead {
-    public static Object resources1 = new Object();
-    public static Object resources2 = new Object();
-    public static void main(String[] args) {
-        new Thread(() -> {
-            // 线程1：占用资源1 ，请求资源2
-            synchronized(resources1){
-                System.out.println("线程1已经占用了资源1，开始请求资源2");
-                Thread.sleep(2000);//休息两秒，防止线程1直接运行完成。
-                //2秒内线程2肯定可以锁住资源2
-                synchronized (resources2){
-                    System.out.println("线程1已经占用了资源2");
-                }
-        }).start();
-        new Thread(() -> {
-            // 线程2：占用资源2 ，请求资源1
-            synchronized(resources2){
-                System.out.println("线程2已经占用了资源2，开始请求资源1");
-                Thread.sleep(2000);
-                synchronized (resources1){
-                    System.out.println("线程2已经占用了资源1");
-                }
-            }}
-        }).start();
-    }
-}
-```
-
-
-
-***
-
-
-
-###### 定位
-
-定位死锁的方法：
-
-* 使用 jps 定位进程 id，再用 `jstack id` 定位死锁，找到死锁的线程去查看源码，解决优化
-
-  ```sh
-  "Thread-1" #12 prio=5 os_prio=0 tid=0x000000001eb69000 nid=0xd40 waiting formonitor entry [0x000000001f54f000]
-  	java.lang.Thread.State: BLOCKED (on object monitor)
-  #省略    
-  "Thread-1" #12 prio=5 os_prio=0 tid=0x000000001eb69000 nid=0xd40 waiting for monitor entry [0x000000001f54f000]
-  	java.lang.Thread.State: BLOCKED (on object monitor)
-  #省略
-  
-  Found one Java-level deadlock:
-  ===================================================
-  "Thread-1":
-      waiting to lock monitor 0x000000000361d378 (object 0x000000076b5bf1c0, a java.lang.Object),
-      which is held by "Thread-0"
-  "Thread-0":
-      waiting to lock monitor 0x000000000361e768 (object 0x000000076b5bf1d0, a java.lang.Object),
-      which is held by "Thread-1"
-      
-  Java stack information for the threads listed above:
-  ===================================================
-  "Thread-1":
-      at thread.TestDeadLock.lambda$main$1(TestDeadLock.java:28)
-      - waiting to lock <0x000000076b5bf1c0> (a java.lang.Object)
-      - locked <0x000000076b5bf1d0> (a java.lang.Object)
-      at thread.TestDeadLock$$Lambda$2/883049899.run(Unknown Source)
-      at java.lang.Thread.run(Thread.java:745)
-  "Thread-0":
-      at thread.TestDeadLock.lambda$main$0(TestDeadLock.java:15)
-      - waiting to lock <0x000000076b5bf1d0> (a java.lang.Object)
-      - locked <0x000000076b5bf1c0> (a java.lang.Object)
-      at thread.TestDeadLock$$Lambda$1/495053715
-  ```
-
-* Linux 下可以通过 top 先定位到 CPU 占用高的 Java 进程，再利用 `top -Hp 进程id` 来定位是哪个线程，最后再用 jstack <pid>的输出来看各个线程栈
-
-* 避免死锁：避免死锁要注意加锁顺序
-
-* 可以使用 jconsole 工具，在 `jdk\bin` 目录下
-
-
-
-***
-
-
-
-##### 活锁
-
-活锁：指的是任务或者执行者没有被阻塞，由于某些条件没有满足，导致一直重复尝试—失败—尝试—失败的过程
-
-两个线程互相改变对方的结束条件，最后谁也无法结束：
-
-```java
-class TestLiveLock {
-    static volatile int count = 10;
-    static final Object lock = new Object();
-    public static void main(String[] args) {
-        new Thread(() -> {
-            // 期望减到 0 退出循环
-            while (count > 0) {
-                Thread.sleep(200);
-                count--;
-                System.out.println("线程一count:" + count);
-            }
-        }, "t1").start();
-        new Thread(() -> {
-            // 期望超过 20 退出循环
-            while (count < 20) {
-                Thread.sleep(200);
-                count++;
-                System.out.println("线程二count:"+ count);
-            }
-        }, "t2").start();
-    }
-}
-```
-
-
-
-***
-
-
-
-##### 饥饿
-
-饥饿：一个线程由于优先级太低，始终得不到 CPU 调度执行，也不能够结束
-
-
-
-***
-
-
-
-### wait-ify
-
-#### 基本使用
-
-需要获取对象锁后才可以调用 `锁对象.wait()`，notify 随机唤醒一个线程，notifyAll 唤醒所有线程去竞争 CPU
-
-Object 类 API：
-
-```java
-public final void notify():唤醒正在等待对象监视器的单个线程。
-public final void notifyAll():唤醒正在等待对象监视器的所有线程。
-public final void wait():导致当前线程等待，直到另一个线程调用该对象的notify()方法或 notifyAll()方法。
-public final native void wait(long timeout):有时限的等待, 到n毫秒后结束等待，或是被唤醒
-```
-
-说明：**wait 是挂起线程，需要唤醒的都是挂起操作**，阻塞线程可以自己去争抢锁，挂起的线程需要唤醒后去争抢锁
-
-对比 sleep()：
-
-* 原理不同：sleep() 方法是属于 Thread 类，是线程用来控制自身流程的，使此线程暂停执行一段时间而把执行机会让给其他线程；wait() 方法属于 Object 类，用于线程间通信
-* 对**锁的处理机制**不同：调用 sleep() 方法的过程中，线程不会释放对象锁，当调用 wait() 方法的时候，线程会放弃对象锁，进入等待此对象的等待锁定池（不释放锁其他线程怎么抢占到锁执行唤醒操作），但是都会释放 CPU
-* 使用区域不同：wait() 方法必须放在**同步控制方法和同步代码块（先获取锁）**中使用，sleep() 方法则可以放在任何地方使用
-
-底层原理：
-
-* Owner 线程发现条件不满足，调用 wait 方法，即可进入 WaitSet 变为 WAITING 状态
-* BLOCKED 和 WAITING 的线程都处于阻塞状态，不占用 CPU 时间片
-* BLOCKED 线程会在 Owner 线程释放锁时唤醒
-* WAITING 线程会在 Owner 线程调用 notify 或 notifyAll 时唤醒，唤醒后并不意味者立刻获得锁，**需要进入 EntryList 重新竞争**
-
-![](https://seazean.oss-cn-beijing.aliyuncs.com/img/Java/JUC-Monitor工作原理2.png)
-
-
-
-***
-
-
-
-#### 代码优化
-
-虚假唤醒：notify 只能随机唤醒一个 WaitSet 中的线程，这时如果有其它线程也在等待，那么就可能唤醒不了正确的线程
-
-解决方法：采用 notifyAll
-
-notifyAll 仅解决某个线程的唤醒问题，使用 if + wait 判断仅有一次机会，一旦条件不成立，无法重新判断
-
-解决方法：用 while + wait，当条件不成立，再次 wait
-
-```java
-@Slf4j(topic = "c.demo")
-public class demo {
-    static final Object room = new Object();
-    static boolean hasCigarette = false;    //有没有烟
-    static boolean hasTakeout = false;
-
-    public static void main(String[] args) throws InterruptedException {
-        new Thread(() -> {
-            synchronized (room) {
-                log.debug("有烟没？[{}]", hasCigarette);
-                while (!hasCigarette) {//while防止虚假唤醒
-                    log.debug("没烟，先歇会！");
-                    try {
-                        room.wait();
-                    } catch (InterruptedException e) {
-                        e.printStackTrace();
-                    }
-                }
-                log.debug("有烟没？[{}]", hasCigarette);
-                if (hasCigarette) {
-                    log.debug("可以开始干活了");
-                } else {
-                    log.debug("没干成活...");
-                }
-            }
-        }, "小南").start();
-
-        new Thread(() -> {
-            synchronized (room) {
-                Thread thread = Thread.currentThread();
-                log.debug("外卖送到没？[{}]", hasTakeout);
-                if (!hasTakeout) {
-                    log.debug("没外卖，先歇会！");
-                    try {
-                        room.wait();
-                    } catch (InterruptedException e) {
-                        e.printStackTrace();
-                    }
-                }
-                log.debug("外卖送到没？[{}]", hasTakeout);
-                if (hasTakeout) {
-                    log.debug("可以开始干活了");
-                } else {
-                    log.debug("没干成活...");
-                }
-            }
-        }, "小女").start();
-
-
-        Thread.sleep(1000);
-        new Thread(() -> {
-        // 这里能不能加 synchronized (room)？
-            synchronized (room) {
-                hasTakeout = true;
-				//log.debug("烟到了噢！");
-                log.debug("外卖到了噢！");
-                room.notifyAll();
-            }
-        }, "送外卖的").start();
-    }
-}
-```
-
-
-
-
-
-****
 
 
 
@@ -1863,35 +94,243 @@ LockSupport 出现就是为了增强 wait & notify 的功能：
 
 
 
-### 安全分析
+### 变量的线程安全分析
 
-成员变量和静态变量：
+#### 成员变量和静态变量是否线程安全？
 
-* 如果它们没有共享，则线程安全
+* 如果它们没有共享，则线程安全。
 * 如果它们被共享了，根据它们的状态是否能够改变，分两种情况：
-  * 如果只有读操作，则线程安全
-  * 如果有读写操作，则这段代码是临界区，需要考虑线程安全问题
+  * 如果只有读操作，则线程安全。
+  * 如果有读写操作，则这段代码是临界区，需要考虑线程安全问题。
+  
+  
 
-局部变量：
+#### 局部变量是否线程安全？
 
-* 局部变量是线程安全的
+* 局部变量是线程安全的。
 * 局部变量引用的对象不一定线程安全（逃逸分析）：
   * 如果该对象没有逃离方法的作用访问，它是线程安全的（每一个方法有一个栈帧）
   * 如果该对象逃离方法的作用范围，需要考虑线程安全问题（暴露引用）
 
-常见线程安全类：String、Integer、StringBuffer、Random、Vector、Hashtable、java.util.concurrent 包
 
-* 线程安全的是指，多个线程调用它们同一个实例的某个方法时，是线程安全的
 
-* **每个方法是原子的，但多个方法的组合不是原子的**，只能保证调用的方法内部安全：
+#### 局部变量线程安全分析
 
-  ```java
-  Hashtable table = new Hashtable();
-  // 线程1，线程2
-  if(table.get("key") == null) {
-  	table.put("key", value);
-  }
-  ```
+##### 局部变量为基本类型
+
+局部变量为基本类型时，不存在线程安全问题，每个线程都会在自己的栈帧内存中为局部变量创建副本，不存在被多个线程共享的问题。
+
+例如，如下代码：
+
+```java
+public static void method1() {
+    int i = 10; 
+    i++;
+}
+```
+
+其指令如下：
+
+```java
+public static void method1();
+    descriptor: ()V
+    flags: ACC_PUBLIC, ACC_STATIC
+    Code:
+      stack=1, locals=1, args_size=0
+         0: bipush        10      //  10 入栈
+         2: istore_0			  //  出栈存储到本地变量表0号变量
+         3: iinc          0, 1	  //  0 号变量自增1
+         6: return
+      LineNumberTable:   // 用于描述Java源代码行号与字节码行号(字节码偏移量)之间的对应关系
+        line 14: 0
+        line 15: 3
+        line 16: 6
+      LocalVariableTable:  // 本地变量表
+        Start  Length   Slot   Name   Signature
+            3       4     0     i   	I
+```
+
+如果有多个线程调用 `method()1` 方法，其内存模型如下图：
+
+![image-20220728085041141](https://yrc-img.oss-cn-hangzhou.aliyuncs.com/img/image-20220728085041141.png)
+
+
+
+
+
+##### 局部变量为引用类型
+
+
+
+如果引用对象未逃离方法的作用范围则线程安全。
+
+```java
+@Slf4j(topic = "c.LocalVariableSecurityAnalysis")
+public class LocalVariableSecurityAnalysis {
+
+    public static void main(String[] args) {
+        Container container = new Container();
+        // 
+        new Thread(container::init, "t1").start();
+        new Thread(container::init, "t2").start();
+    }
+
+
+    static class Container {
+        // 局部变量为引用类型时，
+        public void init() {
+            List<Integer> list = new ArrayList<>();
+            for (int i = 0; i < 500; i++) {
+                add(list);
+                sub(list);
+            }
+            log.debug("list = {}", list);
+        }
+
+        private void add(List<Integer> list) {
+            list.add(1);
+        }
+
+        private void sub(List<Integer> list) {
+            list.remove(0);
+        }
+    }
+}
+```
+
+- 每一个线程调用 `init()` 方法时都会在堆中创建一个新的 `List` 对象，局部变量 `list` 引用该对象，没用被线程共享。
+
+- `add()` 与 `sub()` 的中的参数由 `init()` 传递，引用的是相同的对象，因此不存在线程安全问题。
+
+内存模型如下：
+
+![image-20220728094550928](https://yrc-img.oss-cn-hangzhou.aliyuncs.com/img/image-20220728094550928.png)
+
+
+
+
+
+
+
+如果该对象逃离方法的作用范围，需要考虑线程安全问题（暴露引用）
+
+例如，将使用 `public` 修饰 `add()` 和 `sub()` 方法，因为 `Container` 类可以被继承，则所有非 `private` 方法都可以被重写，可能出现安全问题。
+
+```java
+@Slf4j(topic = "c.LocalVariableSecurityAnalysis")
+public class LocalVariableSecurityAnalysis {
+
+    public static void main(String[] args) {
+
+        Container container = new SubContainer();
+        new Thread(container::init, "t1").start();
+        new Thread(container::init, "t2").start();
+    }
+
+
+    static class Container {
+        
+        public void init() {
+            List<Integer> list = new ArrayList<>();
+            for (int i = 0; i < 500; i++) {
+                add(list);
+                sub(list);
+            }
+            log.debug("list = {}", list);
+        }
+        public void add(List<Integer> list) {
+            list.add(1);
+        }
+
+        public void sub(List<Integer> list) {
+            list.remove(0);
+        }
+    }
+
+    static class SubContainer extends Container {
+        // 子类重写了 sub 方法，并且新创建了线程 st 接收外部传入的引用对象 list 进行操作，存在线程安全问题
+        @Override
+        public void sub(List<Integer> list) {
+            new Thread(() -> list.remove(0), "st").start();
+        }
+    }
+}
+```
+
+每个父线程出中都会创建 `500` 个 `st` 子线程进行 `list.remove()` 操作，父线程和子线程交错执行，很可能出现父线程中还未执行 `list.add()` 子线程先执行 `list.remove()`，则会出现 `IndexOutOfBoundsException` 异常
+
+```
+Exception in thread "st" java.lang.IndexOutOfBoundsException: Index: 0, Size: 0
+	at java.util.ArrayList.rangeCheck(ArrayList.java:659)
+	at java.util.ArrayList.remove(ArrayList.java:498)
+	at com.yrc.juc.e_共享模型之管程.LocalVariableSecurityAnalysis$SubContainer.lambda$sub$0(LocalVariableSecurityAnalysis.java:52)
+	at java.lang.Thread.run(Thread.java:748)
+Exception in thread "st" Exception in thread "st" java.lang.IndexOutOfBoundsException: Index: 0, Size: 0
+	at java.util.ArrayList.rangeCheck(ArrayList.java:659)
+	at java.util.ArrayList.remove(ArrayList.java:498)
+	at com.yrc.juc.e_共享模型之管程.LocalVariableSecurityAnalysis$SubContainer.lambda$sub$0(LocalVariableSecurityAnalysis.java:52)
+	at java.lang.Thread.run(Thread.java:748)
+java.lang.IndexOutOfBoundsException: Index: 0, Size: 0
+	at java.util.ArrayList.rangeCheck(ArrayList.java:659)
+	at java.util.ArrayList.remove(ArrayList.java:498)
+	at com.yrc.juc.e_共享模型之管程.LocalVariableSecurityAnalysis$SubContainer.lambda$sub$0(LocalVariableSecurityAnalysis.java:52)
+	at java.lang.Thread.run(Thread.java:748)
+```
+
+
+
+为了避免此类问题，可以使用 `final` 修饰父类，或者对存在线程安全的方法使用 `private` 修饰。 
+
+
+
+### 常见线程安全类
+
+**常见线程安全类：**
+
+- String
+- Integer
+- StringBuffer
+- Random
+- Vector
+- Hashtable
+- java.util.concurrent (JUC)包下的类
+
+这里说它们是线程安全的是指，多个线程调用它们同一个实例的某个方法时，是线程安全的，可以理解为类中的每一个方法都具备原子性。 
+
+```java
+Hashtable table = new Hashtable();
+// Hashtable#put 方法是同步方法，具备原子性
+new Thread(()->{
+	table.put("key", "value1"); 
+}).start();
+new Thread(()->{
+	table.put("key", "value2");
+}).start();
+```
+
+
+
+但需要注意，多个原子方法的组合就不具备原子性：
+
+```java
+Hashtable table = new Hashtable();
+// 线程1，线程2
+    if(table.get("key") == null) {
+        table.put("key", value);
+    }
+```
+
+```mermaid
+sequenceDiagram
+table <<- table : 
+t1 ->> table : get("key") == null
+```
+
+
+
+
+
+
 
 无状态类线程安全，就是没有成员变量的类
 
